# sd-webui-prompt-postprocessor

./: .gitignore  .markdownlint.jsonc  .pylintrc  .python-version  LICENSE.txt  README.md  __init__.py  grammar.lark  install.py  metadata.ini  ppp.code-workspace  ppp.py  ppp_cache.py  ppp_classes.py  ppp_comfyui.py  ppp_common.py  ppp_config.yaml.defaults  ppp_enmappings.py  ppp_hosts.py  ppp_logging.py  ppp_tree.py  ppp_utils.py  ppp_variables.py  ppp_wildcards.py  pyproject.toml  requirements.txt  sendtonegative.py  stnlogging.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: docs.instructions.md  python-compat.instructions.md  python.instructions.md  tests.instructions.md
.github/workflows/: publish.yml
dev/: compare_models.py
docs/: CONFIG.md  COOKBOOK.md  SYNTAX.md
images/: prompt-postprocessor-icon.ai
scripts/: extension.py  ppp_script.py  sendtonegative.py  tests.py
tests/: base_tests.py  tests.py  tests_choices.py  tests_cleanup.py  tests_commands.py  tests_host.py  tests_performance.py  tests_stn.py  tests_varcomms.py  tests_variables.py  tests_variants.py  tests_wildcards.py
tests/enmappings/: mappings.yaml
tests/wildcards/: _invalid.txt  test.json  test.yaml
tests/wildcards/testwc/: test2.yaml  test3.yaml
tests/wildcards2/text/: wildcard1.txt  wildcard2.txt  wildcard3.txt
tools/: convert_styles.py
web/: ppp_wildcard_concat.js
web/docs/: ACBPPPCleanupOptions.md  ACBPPPENMappingOptions.md  ACBPPPSelectVariable.md  ACBPPPSendToNegativeOptions.md  ACBPPPWildcardConcat.md  ACBPPPWildcardOptions.md  ACBPromptPostProcessor.md
workflows/: PPP example.json
