[project]
name = "sd-webui-prompt-postprocessor"
description = "Stable Diffusion WebUI & ComfyUI extension to post-process the prompt. Features include: wildcards, sending content from the prompt to the negative prompt, variables, model detection, extranetwork mapping, cleanup."
version = "3.2.1"
license = { file = "LICENSE.txt" }
dependencies = ["lark", "numpy", "ruamel.yaml", "pydantic"]
requires-python = ">=3.10"

[project.urls]
repository = "https://github.com/acorderob/sd-webui-prompt-postprocessor"
#  Used by Comfy Registry https://registry.comfy.org/
documentation = "https://github.com/acorderob/sd-webui-prompt-postprocessor/main/README.md"
issues = "https://github.com/acorderob/sd-webui-prompt-postprocessor/issues"

[tool.comfy]
publisher_id = "acorderob"
display_name = "ACB Prompt PostProcessor"
icon = "https://raw.githubusercontent.com/acorderob/sd-webui-prompt-postprocessor/main/images/prompt-postprocessor-icon.png"
