[project]
name = "sd-webui-prompt-postprocessor"
description = "Stable Diffusion WebUI & ComfyUI extension to post-process the prompt. Features include: wildcards, sending content from the prompt to the negative prompt, variables, model detection, extranetwork mapping, cleanup."
version = "3.2.2"
license = { file = "LICENSE.txt" }
dependencies = ["lark==1.*", "numpy==2.*", "ruamel.yaml==0.*", "pydantic==2.*"]
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/acorderob/sd-webui-prompt-postprocessor"
#  Used by Comfy Registry https://registry.comfy.org/
Documentation = "https://github.com/acorderob/sd-webui-prompt-postprocessor/main/README.md"
"Bug Tracker" = "https://github.com/acorderob/sd-webui-prompt-postprocessor/issues"
issues = "https://github.com/acorderob/sd-webui-prompt-postprocessor/issues"

[tool.comfy]
PublisherId = "acorderob"
DisplayName = "ACB Prompt PostProcessor"
Icon = "https://raw.githubusercontent.com/acorderob/sd-webui-prompt-postprocessor/main/images/prompt-postprocessor-icon.png"
